# pyrseus

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENCE.md  README.md  clean.sh  dev-requirements.txt  optional-non-win32-requirements.txt  optional-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docker-win32/: Dockerfile  README.md  test.bat
docs/: Makefile  requirements.txt
docs/source/: conf.py  contributing.rst  index.rst  install.rst  plugins.rst  writingplugins.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: custom-class-template.rst
docs/source/notebooks/: debugging_example.py  executor_ctx_vs_classes.py  get_executor.py  on_error.py
src/pyrseus/: __init__.py  interactive.py
src/pyrseus/core/: __init__.py  pickle.py  sys.py
src/pyrseus/ctx/: __init__.py  api.py  mgr.py  registry.py  simple.py
src/pyrseus/ctx/plugins/: __init__.py  cpinline.py  cpmpi4py.py  cpnocatch.py  cpprocess.py  inline.py  ipyparallel.py  loky.py  mpi4py.py  nocatch.py  pinline.py  pnocatch.py  process.py  thread.py
src/pyrseus/executors/: __init__.py  cpinline.py  cpnocatch.py  cpprocess.py  inline.py  nocatch.py  pinline.py  pnocatch.py
tests/: _crash_script.py  test_cpmpi4py_plugin.py  test_cpnocatch_pickle.py  test_cpprocess_on_error.py  test_custom_plugin.py  test_extract_keywords.py  test_interactive.py  test_ipyparallel_plugin.py  test_loky_plugin.py  test_mpi4py_plugin.py  test_multiprocessing_reliability_issues.py  test_pickle_pickler_overrides.py  test_pickle_troubleshooting_func_errors.py  test_pinline_pickle.py  test_pnocatch_pickle.py  test_pool_sizes.py  test_process_and_cpprocess_kwargs.py  test_thread_plugin_kwargs.py
